fix: 100vh behaviour on iOS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+  height: 100%;
+}
+
 html {
   font-family: sans-serif;
 }
